sticky things work

--- a/_pugfiles/header.pug
+++ b/_pugfiles/header.pug
@@ -1,4 +1,4 @@
-.top_container
+.top_container   
     header.site_header
         .logo_container
             h1.logo Zhujing
@@ -16,11 +16,10 @@
         ul.social_links
             li: a(href="https://www.facebook.com/wangzhujing") .facebook
             li: a(href="https://www.instagram.com/wngzhjng/") .instagram
-            li: a(href="#github") .github
+            li: a(href="https://github.com/zhujingw") .github
             li: a(href="#linkedin") .linkedin
     .follow_icon_container    
 .main_content_container
-            
 .right_container
     .sub_nav_container
         p scroll down for more
