--- a/assets/css/2-modules/header.sass
+++ b/assets/css/2-modules/header.sass
@@ -2,6 +2,7 @@
     margin: 0
     padding: 0
     height: 123px
+    width: 100%
     background: #e4e4e3
     header.site_header
         height: 123px
@@ -32,7 +33,7 @@
                 overflow: hidden
                 ul
                     float: right
-                    margin: 50.5px 0px 50.5px 0px
+                    margin: 50.5px 2.1% 50.5px 0px
                     padding: 0
                     background: #e4e4e3
                     list-style: none
@@ -47,8 +48,8 @@
     margin: 0
     padding: 0
     width: 8%
-    height: 647px
-    // background: yellow
+    height: 1000px
+    background: #e4e4e3
     display: inline-block
     .social_nav_container
         width: 100%
@@ -59,7 +60,7 @@
         ul
             display: inline
             margin: 1px 2px 3px 3%
-            position: absolute
+            position: fixed
             bottom: 11%
             transform-origin: 0 0
             transform: rotate(270deg)
@@ -71,8 +72,10 @@
                 display: inline
                 padding-left: 20px
     .follow_icon_container
-        width: 100%
+        width: 8%
         height: 109px
+        position: fixed
+        bottom: 1%
         background:
             image: url(/assets/img/FOLLOW.png)
             repeat: no-repeat
@@ -84,15 +87,15 @@
     magrin: 0
     padding: 0
     width: 84%
-    height: 647px
-    background: #e4e4e3
+    height: 1000px
+    background: white
     display: inline-block
 
 .right_container
     margin: 0
     padding: 0
     width: 8%
-    height: 647px
+    height: 1000px
     background: #e4e4e3
     display: inline-block
     .sub_nav_container
@@ -104,9 +107,9 @@
             font-size: 14px
             white-space: nowrap
             margin: 0
-            position: absolute
-            bottom: 10%
-            right: 35%
+            position: fixed
+            bottom: 15%
+            right: 3%
             transform-origin: 100% 0%
             transform: rotate(90deg)
 
