--- a/assets/css/2-modules/header.sass
+++ b/assets/css/2-modules/header.sass
@@ -3,7 +3,7 @@
     padding: 0
     height: 123px
     width: 100%
-    background: #e4e4e3
+    background: white
     z-index: 99
     header.site_header
         height: 123px
@@ -12,7 +12,7 @@
             padding: 0
             width: 8%
             height: 123px
-            background: #e4e4e3
+            background: white
             display: inline-block
             .logo
                 +hide-text
@@ -27,7 +27,7 @@
             padding: 0
             width: 92%
             height: 123px
-            background: #e4e4e3
+            background: white
             display: inline-block
             .site_nav
                 height: 123px
@@ -36,7 +36,7 @@
                     float: right
                     margin: 50.5px 2.1% 50.5px 0px
                     padding: 0
-                    background: #e4e4e3
+                    background: white
                     list-style: none
                     li
                         font-family: "Futura"
@@ -52,12 +52,12 @@
     padding: 0
     width: 8%
     height: 1000px
-    background: #e4e4e3
+    background: white
     display: inline-block
     .social_nav_container
         width: 100%
         height: 538px
-        background: #e4e4e3
+        background: white
         // position: relative
         // overflow: hidden
         ul
@@ -82,7 +82,7 @@
         background:
             image: url(/assets/img/FOLLOW.png)
             repeat: no-repeat
-            color: #e4e4e3
+            color: white
             position: center
 
 
@@ -90,7 +90,7 @@
 //     magrin: 0
 //     padding: 0
 //     width: 84%
-//     height: 1000px
+//     height: 645px
 //     background: white
 //     display: inline-block
 
@@ -101,7 +101,7 @@
     padding: 0
     width: 8%
     height: 1000px
-    background: #e4e4e3
+    background: white
     display: inline-block
     .sub_nav_container
         width: 100%
@@ -174,7 +174,7 @@
 // .home-wrap header
 //     width: 1200px
 //     height: 89px
-//     background: #e4e4e3
+//     background: white
 //     padding: 0px 0px
 //     margin-right: 0
 //     size: contain
@@ -188,7 +188,7 @@
 //             image: url(/assets/img/zj.png)
 //             repeat: no-repeat
 //             position: center
-//             color: #e4e4e3
+//             color: white
 //             width: 42px
 //             height: 52px
 //             margin: 0px
@@ -196,7 +196,7 @@
 //     .site_nav
 //         height: 89px
 //         display: inline
-//         background: #e4e4e3
+//         background: white
 //         ul
 //             list-style: none
 //             margin: 0 0 0 0
