--- a/assets/css/2-modules/section_about.sass
+++ b/assets/css/2-modules/section_about.sass
@@ -3,7 +3,7 @@
     padding: 0
     width: 84%
     height: 645px
-    background: #e4e4e3
+    background: white
     z-index: 1
     .main_content_container
         margin: 0 16% 0 16%
@@ -14,7 +14,7 @@
         display: flex
         flex-direction: row
         .left_box
-            width: 50%
+            width: 45%
             height: 68%
             position: relative
             background: #333333
@@ -27,7 +27,7 @@
                 height: 68%
                 position: absolute
                 .hello
-                    margin: 0
+                    margin-top: 5%
                     font-family: "DIN Condensed"
                     font-size: 24px
                     font-stretch: extra-condensed
@@ -38,7 +38,7 @@
                     font-size: 36px
                     color: white
                 .skills
-                    margin: 0
+                    margin-top: 7%
                     font-family: "Futura"
                     font-size: 20px
                     color: white
@@ -53,7 +53,7 @@
             .bottom_text_box
         .right_box
             +hide-text
-            width: 50%
+            width: 45%
             height: 78%
             z-index: 2
             background:
