--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -483,7 +483,7 @@ body {
   padding: 0;
   height: 123px;
   width: 100%;
-  background: #e4e4e3;
+  background: white;
   z-index: 99; }
   .top_container header.site_header {
     height: 123px; }
@@ -492,7 +492,7 @@ body {
       padding: 0;
       width: 8%;
       height: 123px;
-      background: #e4e4e3;
+      background: white;
       display: inline-block; }
       .top_container header.site_header .logo_container .logo {
         overflow: hidden;
@@ -508,7 +508,7 @@ body {
       padding: 0;
       width: 92%;
       height: 123px;
-      background: #e4e4e3;
+      background: white;
       display: inline-block; }
       .top_container header.site_header .nav_container .site_nav {
         height: 123px;
@@ -517,7 +517,7 @@ body {
           float: right;
           margin: 50.5px 2.1% 50.5px 0px;
           padding: 0;
-          background: #e4e4e3;
+          background: white;
           list-style: none; }
           .top_container header.site_header .nav_container .site_nav ul li {
             font-family: "Futura";
@@ -532,12 +532,12 @@ body {
   padding: 0;
   width: 8%;
   height: 1000px;
-  background: #e4e4e3;
+  background: white;
   display: inline-block; }
   .left_container .social_nav_container {
     width: 100%;
     height: 538px;
-    background: #e4e4e3; }
+    background: white; }
     .left_container .social_nav_container ul {
       display: inline;
       margin: 1px 2px 3px 3%;
@@ -561,7 +561,7 @@ body {
     bottom: 1%;
     background-image: url(/assets/img/FOLLOW.png);
     background-repeat: no-repeat;
-    background-color: #e4e4e3;
+    background-color: white;
     background-position: center; }
 
 .right_container {
@@ -571,7 +571,7 @@ body {
   padding: 0;
   width: 8%;
   height: 1000px;
-  background: #e4e4e3;
+  background: white;
   display: inline-block; }
   .right_container .sub_nav_container {
     width: 100%;
@@ -595,7 +595,7 @@ body {
   padding: 0;
   width: 84%;
   height: 645px;
-  background: #e4e4e3;
+  background: white;
   z-index: 1; }
   .mid_container .main_content_container {
     margin: 0 16% 0 16%;
@@ -607,7 +607,7 @@ body {
     -ms-flex-direction: row;
         flex-direction: row; }
     .mid_container .main_content_container .left_box {
-      width: 50%;
+      width: 45%;
       height: 68%;
       position: relative;
       background: #333333;
@@ -622,7 +622,7 @@ body {
         height: 68%;
         position: absolute; }
         .mid_container .main_content_container .left_box .top_text_box .hello {
-          margin: 0;
+          margin-top: 5%;
           font-family: "DIN Condensed";
           font-size: 24px;
           font-stretch: extra-condensed;
@@ -633,7 +633,7 @@ body {
           font-size: 36px;
           color: white; }
         .mid_container .main_content_container .left_box .top_text_box .skills {
-          margin: 0;
+          margin-top: 7%;
           font-family: "Futura";
           font-size: 20px;
           color: white; }
@@ -649,7 +649,7 @@ body {
       overflow: hidden;
       text-indent: 101%;
       white-space: nowrap;
-      width: 50%;
+      width: 45%;
       height: 78%;
       z-index: 2;
       background-image: url(/assets/img/IMG_1615.JPG);
