fixed header logo

--- a/_pugfiles/header.pug
+++ b/_pugfiles/header.pug
@@ -1,7 +1,7 @@
 .top_container   
     header.site_header
         .logo_container
-            h1.logo Zhujing
+            h1.logo zhujing
         
         .nav_container
             nav.site_nav
