--- a/assets/css/2-modules/section_about.sass
+++ b/assets/css/2-modules/section_about.sass
@@ -34,13 +34,15 @@
                     color: white
                 .name
                     margin: 0
+                    padding-left: 5%
                     font-family: "Futura"
                     font-size: 36px
                     color: white
                 .skills
                     margin-top: 7%
+                    padding-left: 5%
                     font-family: "Futura"
-                    font-size: 20px
+                    font-size: 15px
                     color: white
                 .hashtags
                     margin: 0
