added bottom text-box to about section

--- a/_pugfiles/section_about.pug
+++ b/_pugfiles/section_about.pug
@@ -10,7 +10,7 @@
                     li: applied math
                     li: computer science
             .bottom_text_box
-                p and i collect moments not things
+                p and   i   collect     moments not  things ...
         .right_box zhujing's photo
             
             
