--- a/assets/css/2-modules/section_about.sass
+++ b/assets/css/2-modules/section_about.sass
@@ -15,21 +15,22 @@
         flex-direction: row
         .left_box
             width: 45%
-            height: 68%
+            height: 72%
             position: relative
             background: #333333
-            margin-top: 6%
+            margin-top: 5%
             z-index: 2
             display: flex
             flex-direction: column
             .top_text_box
+                order: 0
                 margin: 30% 21% 0% 9%
                 height: 68%
                 position: absolute
                 .hello
                     margin-top: 5%
                     font-family: "DIN Condensed"
-                    font-size: 24px
+                    font-size: 200%
                     font-stretch: extra-condensed
                     color: white
                 .name
@@ -53,6 +54,18 @@
                         font-size: 16px
                         color: white
             .bottom_text_box
+                position: absolute
+                bottom: 0
+                right: 0
+                width: 100%
+                background: white
+                p
+                    text-align: right
+                    margin: 0
+                    font-family: "Futura"
+                    font-size: 12px
+                    color: black
+
         .right_box
             +hide-text
             width: 45%
