blog framework done

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -603,6 +603,7 @@ body {
 
 .mid_container {
   margin-left: 8%;
+  margin-right: 8%;
   padding: 0;
   width: 84%;
   height: 645px;
@@ -683,3 +684,34 @@ body {
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover; }
+
+.mid_container {
+  margin-left: 8%;
+  margin-right: 8%;
+  padding: 0;
+  width: 84%;
+  height: 645px;
+  background: white;
+  z-index: 1; }
+  .mid_container .main_content_container {
+    margin: 0 16% 0 16%;
+    padding: 0;
+    width: 68%;
+    height: 100%;
+    position: relative; }
+    .mid_container .main_content_container .posts_container {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+      background: pink;
+      width: 531px;
+      height: 524px; }
+      .mid_container .main_content_container .posts_container .article-thumb {
+        display: block;
+        background-size: cover;
+        width: 33%;
+        height: 33%;
+        float: left; }
+      .mid_container .main_content_container .posts_container .article-meta {
+        background: rgba(255, 255, 255, 0.7);
+        color: #333333; }
