set up first 3 sections

--- a/assets/css/2-modules/header.sass
+++ b/assets/css/2-modules/header.sass
@@ -1,7 +1,7 @@
 .top_container
     margin: 0
     padding: 0
-    height: 123px
+    height: 16%
     width: 100%
     background: white
     z-index: 99
