--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -481,7 +481,7 @@ body {
 .top_container {
   margin: 0;
   padding: 0;
-  height: 123px;
+  height: 16%;
   width: 100%;
   background: white;
   z-index: 99; }
@@ -600,6 +600,28 @@ body {
               transform-origin: 100% 0%;
       -webkit-transform: rotate(90deg);
               transform: rotate(90deg); }
+
+.mid_container {
+  margin-left: 8%;
+  margin-right: 8%;
+  margin-top: 2%;
+  padding: 0;
+  width: 84%;
+  height: 645px;
+  background: white;
+  z-index: 1; }
+  .mid_container .main_content_container {
+    margin: 0 16% 0 16%;
+    padding: 0;
+    width: 68%;
+    height: 100%;
+    position: relative; }
+    .mid_container .main_content_container .carousel_container {
+      position: absolute;
+      height: 68%;
+      width: 100%;
+      background: coral;
+      top: 10%; }
 
 .mid_container {
   margin-left: 8%;
