--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,9 @@
 @import "1-base/base";
 
 @import "2-modules/header";
+@import "2-modules/section_home";
 @import "2-modules/section_about";
 @import "2-modules/section_blog";
+
 
 // @import "3-layouts/home"
