--- a/assets/css/2-modules/section_blog.sass
+++ b/assets/css/2-modules/section_blog.sass
@@ -29,3 +29,4 @@
             .article-meta
                 background: fade-out(white, 0.3)
                 color: #333333
+            .article-thumb
