--- a/_includes/section_home.html
+++ b/_includes/section_home.html
@@ -1,1 +1,1 @@
-<div class="mid_container"><div class="main_content_container"><div class="carousel_container"></div></div></div>
+<div class="mid_container"><div class="main_content_container"><div class="carousel_container"><p>in construction! coming soon ...</p></div></div></div>
