--- a/assets/css/2-modules/section_home.sass
+++ b/assets/css/2-modules/section_home.sass
@@ -19,3 +19,7 @@
             width: 100%
             background: coral
             top: 10%
+            p
+                position: center
+                font-family: "Futura"
+                font-size: 24px
