--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,7 @@
 @import "2-modules/section_home";
 @import "2-modules/section_about";
 @import "2-modules/section_blog";
+@import "2-modules/section_resume";
 
 
 // @import "3-layouts/home"
