--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -622,6 +622,10 @@ body {
       width: 100%;
       background: coral;
       top: 10%; }
+      .mid_container .main_content_container .carousel_container p {
+        position: center;
+        font-family: "Futura";
+        font-size: 24px; }
 
 .mid_container {
   margin-left: 8%;
@@ -737,3 +741,39 @@ body {
       .mid_container .main_content_container .posts_container .article-meta {
         background: rgba(255, 255, 255, 0.7);
         color: #333333; }
+
+.mid_container {
+  margin-left: 8%;
+  margin-right: 8%;
+  margin-top: 2%;
+  padding: 0;
+  width: 84%;
+  height: 645px;
+  background: white;
+  z-index: 1; }
+  .mid_container .main_content_container {
+    margin: 0 16% 0 16%;
+    padding: 0;
+    width: 68%;
+    height: 100%;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: row;
+        flex-direction: row; }
+    .mid_container .main_content_container .main_content_container {
+      margin: 0 16% 0 16%;
+      padding: 0;
+      width: 68%;
+      height: 100%;
+      display: -ms-flexbox;
+      display: flex;
+      -ms-flex-direction: row;
+          flex-direction: row; }
+      .mid_container .main_content_container .main_content_container .column_1 {
+        width: 45%;
+        height: 72%;
+        background: pink; }
+      .mid_container .main_content_container .main_content_container .column_2 {
+        width: 45%;
+        height: 78%;
+        background: black; }
